--- a/index.html
+++ b/index.html
@@ -395,14 +395,156 @@
 <section id="traiteur" class="section fade-in">
     <h2>Traiteur</h2>
     <div class="produits">
+
+        <!-- Tacos -->
         <div class="carte-produit">
-            <img src="images/traiteur1.jpg" alt="Traiteur 1">
-            <h3>Traiteur 1</h3>
-            <p>Description à remplir</p>
+            <img src="images/tacos-poulet.jpg" alt="Tacos Poulet">
+            <h3>🌮 Tacos Poulet</h3>
+            <p>Tacos généreux avec poulet savoureux, parfaitement assaisonné.</p>
             <span class="prix">Prix €</span>
         </div>
+
+        <div class="carte-produit">
+            <img src="images/tacos-viande.jpg" alt="Tacos Viande Hachée">
+            <h3>🌮 Tacos Viande Hachée</h3>
+            <p>Tacos garni de viande hachée épicée et fondante.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <!-- Sandwichs américains -->
+        <div class="carte-produit">
+            <img src="images/sandwich-steak.jpg" alt="Sandwich Steak">
+            <h3>🥪 Sandwich Steak</h3>
+            <p>Savoureux sandwich américain au steak, parfait pour un repas rapide.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/sandwich-tenders.jpg" alt="Sandwich Tenders">
+            <h3>🥪 Sandwich Tenders</h3>
+            <p>Sandwich américain avec tenders de poulet croustillants.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <!-- Paninis -->
+        <div class="carte-produit">
+            <img src="images/panini-jambon.jpg" alt="Panini Jambon Cheddar">
+            <h3>🥪 Panini Jambon Cheddar</h3>
+            <p>Panini chaud avec jambon et cheddar fondant.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/panini-poulet.jpg" alt="Panini Poulet">
+            <h3>🥪 Panini Poulet</h3>
+            <p>Panini au poulet tendre et assaisonné pour un goût savoureux.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/panini-poulet-curry.jpg" alt="Panini Poulet Curry">
+            <h3>🥪 Panini Poulet Curry</h3>
+            <p>Panini relevé au poulet curry pour les amateurs de saveurs épicées.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/panini-souman-cheddar.jpg" alt="Panini Souman Cheddar">
+            <h3>🥪 Panini Souman Cheddar</h3>
+            <p>Panini au souman et cheddar, fondant et gourmand.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/panini-chevre.jpg" alt="Panini Chèvre">
+            <h3>🥪 Panini Chèvre</h3>
+            <p>Panini au fromage de chèvre, savoureux et fondant.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <!-- Petits pains farcis -->
+        <div class="carte-produit">
+            <img src="images/petitpain-poulet-curry.jpg" alt="Petit Pain Poulet Curry">
+            <h3>🥐 Petit Pain Poulet Curry</h3>
+            <p>Petit pain moelleux garni de poulet au curry parfumé.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/petitpain-viande.jpg" alt="Petit Pain Viande Hachée">
+            <h3>🥐 Petit Pain Viande Hachée</h3>
+            <p>Petit pain farci avec viande hachée savoureuse.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <!-- Sandwichs variés -->
+        <div class="carte-produit">
+            <img src="images/sandwich-jambon-cheddar.jpg" alt="Sandwich Jambon Cheddar">
+            <h3>🥪 Sandwich Jambon Cheddar</h3>
+            <p>Classique et gourmand, parfait pour un repas rapide.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/sandwich-poulet.jpg" alt="Sandwich Poulet">
+            <h3>🥪 Sandwich Poulet</h3>
+            <p>Sandwich moelleux garni de poulet tendre.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/sandwich-poulet-curry.jpg" alt="Sandwich Poulet Curry">
+            <h3>🥪 Sandwich Poulet Curry</h3>
+            <p>Sandwich relevé au poulet curry pour un goût épicé.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/sandwich-tomate-mozza.jpg" alt="Sandwich Tomate Mozzarella">
+            <h3>🥗 Sandwich Tomate Mozzarella</h3>
+            <p>Fraîcheur et saveurs italiennes dans un sandwich léger.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/sandwich-pastrami.jpg" alt="Sandwich Pastrami">
+            <h3>🥪 Sandwich Pastrami</h3>
+            <p>Classique américain avec viande de pastrami savoureuse.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/sandwich-vegetarien.jpg" alt="Sandwich Végétarien">
+            <h3>🥗 Sandwich Végétarien</h3>
+            <p>Sandwich sain avec légumes frais et saveurs équilibrées.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/sandwich-thon.jpg" alt="Sandwich Thon">
+            <h3>🐟 Sandwich Thon</h3>
+            <p>Sandwich frais avec thon et condiments savoureux.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <!-- Lasagnes et plat du jour -->
+        <div class="carte-produit">
+            <img src="images/lasagnes.jpg" alt="Lasagnes">
+            <h3>🍝 Lasagnes</h3>
+            <p>Lasagnes maison, riches en saveurs et généreusement garnies.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/plat-du-jour.jpg" alt="Plat du jour">
+            <h3>🍽️ Plat du jour</h3>
+            <p>Notre plat du jour, frais et préparé avec soin chaque matin.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
     </div>
 </section>
+
     
  <section id="horaire" class="section fade-in">
     <h2>Horaires</h2>
