--- a/index.html
+++ b/index.html
@@ -50,18 +50,22 @@
 <section id="pains" class="section fade-in">
     <h2>Pains</h2>
     <div class="produits">
+
+        <!-- Pain Traditionnel -->
         <div class="carte-produit">
-            <img src="images/pain1.jpg" alt="Pain 1">
-            <h3>Pain 1</h3>
-            <p>Description à remplir</p>
+            <img src="images/pain-tradition.jpg" alt="Pain Tradition">
+            <h3>🥖 Pain Tradition</h3>
+            <p>Pain croustillant à la croûte dorée, fabriqué selon la tradition artisanale.</p>
             <span class="prix">Prix €</span>
         </div>
+
         <div class="carte-produit">
-            <img src="images/pain2.jpg" alt="Pain 2">
-            <h3>Pain 2</h3>
-            <p>Description à remplir</p>
+            <img src="images/pain-complet.jpg" alt="Pain Complet">
+            <h3>🍞 Pain Complet</h3>
+            <p>Pain riche en fibres, idéal pour une alimentation saine et savoureuse.</p>
             <span class="prix">Prix €</span>
         </div>
+    
     </div>
 </section>
 
