--- a/index.html
+++ b/index.html
@@ -572,7 +572,20 @@
     </p>
 </section>
 
-
+    <section id="offres" class="section fade-in">
+    <h2>Offres Spéciales</h2>
+    <p class="description-offre">
+        Profitez de notre offre du jour : un sandwich + un dessert + une boisson <strong>offerte</strong> !
+    </p>
+    <div class="produits">
+        <div class="carte-produit">
+            <img src="images/offre-sandwich.jpg" alt="Offre Sandwich">
+            <h3>🥪 Sandwich + Dessert</h3>
+            <p>Choisissez votre sandwich préféré et repartez avec un dessert et une boisson offerte.</p>
+            <span class="prix">Offre spéciale</span>
+        </div>
+    </div>
+</section>
 
 <section id="commande" class="section fade-in">
     <h2>Passer une commande</h2>
