--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
   <a data-target="boissons">Boissons</a>
   <a data-target="traiteur">Traiteur</a>
   <a data-target="horaire">Horaires</a>
+  <a data-target="offres">Offres</a>
   <a data-target="commande">Commander</a>
   <a data-target="information">Informations</a>
 </div>
