--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
         <div class="carte-produit">
             <img src="images/offre-sandwich.jpg" alt="Offre Sandwich">
             <h3>🥪 Sandwich + Dessert</h3>
-            <p>Choisissez votre sandwich préféré et repartez avec un dessert et une boisson offerte.</p>
+            <p>Choisissez votre sandwich préféré et un dessert et repartez avec une boisson offerte.</p>
             <span class="prix">Offre spéciale</span>
         </div>
     </div>
